src/objects/Config_cs_caseFieldVisibility__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Hierarchical custom setting that provides access to some case fields based on user profiles.</description>
    <fields>
        <fullName>Field1_cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field2_cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestFieldVisibility_cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestFieldVisibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TestPicklist_cs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestPicklist</label>
        <type>Checkbox</type>
    </fields>
    <label>Config_cs_caseFieldVisibility</label>
</CustomObject>